testdata/baselines/reference/submodule/compiler/jsdocTypeNongenericInstantiationAttempt.errors.txt
index8.js(4,12): error TS2749: 'fn' refers to a value, but is being used as a type here. Did you mean 'typeof fn'?
index8.js(4,15): error TS2304: Cannot find name 'T'.


==== index.js (0 errors) ====
    /**
     * @param {<T>(m: Boolean<T>) => string} somebody
     */
    function sayHello(somebody) {
        return 'Hello ' + somebody;
    }
    
==== index2.js (0 errors) ====
    /**
     * @param {<T>(m: Void<T>) => string} somebody
     */
    function sayHello2(somebody) {
        return 'Hello ' + somebody;
    }
    
    
==== index3.js (0 errors) ====
    /**
     * @param {<T>(m: Undefined<T>) => string} somebody
     */
    function sayHello3(somebody) {
        return 'Hello ' + somebody;
    }
    
    
==== index4.js (0 errors) ====
    /**
     * @param {<T>(m: Function<T>) => string} somebody
     */
    function sayHello4(somebody) {
        return 'Hello ' + somebody;
    }
    
    
==== index5.js (0 errors) ====
    /**
     * @param {<T>(m: String<T>) => string} somebody
     */
    function sayHello5(somebody) {
        return 'Hello ' + somebody;
    }
    
    
==== index6.js (0 errors) ====
    /**
     * @param {<T>(m: Number<T>) => string} somebody
     */
    function sayHello6(somebody) {
        return 'Hello ' + somebody;
    }
    
    
==== index7.js (0 errors) ====
    /**
     * @param {<T>(m: Object<T>) => string} somebody
     */
    function sayHello7(somebody) {
        return 'Hello ' + somebody;
    }
    
==== index8.js (2 errors) ====
    function fn() {}
    
    /**
     * @param {fn<T>} somebody
               ~~
!!! error TS2749: 'fn' refers to a value, but is being used as a type here. Did you mean 'typeof fn'?
                  ~
!!! error TS2304: Cannot find name 'T'.
     */
    function sayHello8(somebody) { }